<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="application_name">Testbed Logger</string>
    <string name="activity_start_up_condition_bluetooth_low_energy">Podpora Bluetooth LE</string>
    <string name="activity_start_up_condition_permissions">Oprávnění aplikace</string>
    <string name="activity_start_up_condition_location">Poloha</string>
    <string name="activity_start_up_condition_bluetooth_adapter">Bluetooth</string>
    <string name="activity_start_up_condition_start_application">Spouštění aplikace</string>
    <string name="activity_discover_devices_title">Dostupná zařízení</string>
    <string name="activity_discover_devices_no_devices_found_label">
        Žádná zařízení nebyla nalezena</string>
    <string name="activity_discover_devices_bluetooth_le_service_failed">
        Nepodařilo se spustit službu běžící na pozadí.</string>
    <string name="activity_database_fragment_title_pedometer">Krokoměr</string>
    <string name="activity_database_fragment_title_heart_rate_meter">Srdeční tep</string>
    <string name="activity_database_fragment_title_thermometer">Teploměr</string>
    <string name="activity_database_tbi_overview_label">Přehled</string>
    <string name="activity_database_tbi_chart_view_label">Trendy</string>
    <string name="activity_database_tbi_list_view_label">Záznamy</string>
    <string name="activity_database_bluetooth_le_service_failed">
        Nepodařilo se spustit službu běžící na pozadí.</string>
    <string name="activity_database_export_data_failed">
        Data se nepodařilo exportovat.</string>
    <string name="fragment_base_visualisation_no_data_available_label">Žádná data k zobrazení</string>
    <string name="fragment_base_visualisation_change_interval_label">Změnit interval</string>
    <string name="fragment_base_visualisation_no_data_for_interval_1_2">Za zvolené období</string>
    <string name="fragment_base_visualisation_no_data_for_interval_2_2">
        nejsou bohužel žádná data k dispozici</string>
    <string name="fragment_base_visualisation_interval_year">od počátků věků</string>
    <string name="fragment_overview_last_value_label">Poslední známá hodnota:</string>
    <string name="fragment_overview_this_day_label">Za tento den:</string>
    <string name="fragment_overview_this_week_label">Za tento týden:</string>
    <string name="fragment_overview_this_month_label">Za tento měsíc:</string>
    <string name="fragment_overview_data_set_sum_label">Celkový úrhn</string>
    <string name="fragment_overview_min_value_label">Minimální hodnota</string>
    <string name="fragment_overview_median_label">Medián</string>
    <string name="fragment_overview_max_value_label">Maximální hodnota</string>
    <string name="fragment_overview_mean_value_label">Průměrná hodnota</string>
    <string name="fragment_chart_max_interval_scale">Podrobnější přehled již nelze zobrazit</string>
    <string name="fragment_chart_steps_ranges_label">Celkový úhrn kroků</string>
    <string name="fragment_chart_heart_rates_ranges_label">Rozpětí srdečních tepů</string>
    <string name="fragment_chart_heart_rates_means_label">Průměr srdečních tepů</string>
    <string name="fragment_chart_temperatures_ranges_label">Rozpětí teplot</string>
    <string name="fragment_chart_temperatures_means_label">Průměr teplot</string>
    <string name="fragment_list_item_max_interval_scale">
        Podrobnější přehled již nelze zobrazit</string>
    <string name="fragment_list_item_sort_by_time">Podle času</string>
    <string name="fragment_list_item_sort_by_value">Podle hodnoty</string>
    <string name="fragment_list_item_sort_order_asc">Vzestupně</string>
    <string name="fragment_list_item_sort_order_desc">Sestupně</string>
    <string name="dialog_ble_not_supported_title">Nemáš Bluetooth LE</string>
    <string name="dialog_ble_not_supported_message">
                Bluetooth Low Energy, které využívá náš Testbed, není na tvém zařízení podporováno.
                Provoz aplikace na tvém zařízení není možný a nedává žádný symsl,
                proto bude aplikace ukončena.
            </string>
    <string name="dialog_ble_not_supported_negative_button">Tomu nevěřím</string>
    <string name="dialog_location_permission_request_title">Potřebujeme nějaké opravnění</string>
    <string name="dialog_location_permission_request_message">
                Aplikace pro Testbed využívá technologii <b>Bluetooth Low Energy</b>,která
                pro vyhledání a připojení k zařízením potřebuje opravnění k přístupu k poloze.\n\n
                Neboj, žádné údaje o tvojí poloze <b>neshomaždujeme</b> a <b>neukládáme</b>,
                jen jí potřebujeme pro správnou funkci aplikace. <b>Prosím uděl nám oprávnění.</b>
            </string>
    <string name="dialog_location_permission_request_positive_button">Ano, rozumím</string>
    <string name="dialog_location_permission_request_negative_button">Tomu nevěřím</string>
    <string name="dialog_location_permission_denied_title">Bez polohy to nepůjde</string>
    <string name="dialog_location_permission_denied_message">
                Tak takhle to opravdu nepůjde. Bez povolení přistupu k poloze se opravdu neobejdeme,
                proto bude aplikace ukončena.\n\n
                Pokud sis to rozmyslel, povol oprávnění k přístupu k poloze.
            </string>
    <string name="dialog_location_permission_denied_positive_button">Rozmyslel jsem si to</string>
    <string name="dialog_location_permission_denied_negative_button">Někdy příště</string>
    <string name="dialog_location_permission_denied_forever_title">Nechtěl jsi být znova obtěžován</string>
    <string name="dialog_location_permission_denied_forever_message">
                Tak takhle to opravdu nepůjde.
                Bez povolení přístupu k poloze se opravdu neobejdeme.\n\n
                Navíc jsi zvolil možnost nebýt znova dotazem na povolení obtěžován.
                Teď to již musíš sám změnit v nastavení aplikace, nebo ji přeinstalovat.
                Ale neboj, i s tím ti pomůžeme.\n\n
                Jdi do systémového nastavení aplikace a v záložce <b>Oprávnění aplikací</b>
                povol přístup k <b>Poloze</b>. Poté aplikaci restartuj.\n\n
                <b>TIP: </b>Do systémového nastavení se dostaneš pomocí tlačítka
                <b>Systémové nastavení</b>.
            </string>
    <string name="dialog_location_permission_denied_forever_positive_button">Systémové nastavení</string>
    <string name="dialog_location_permission_denied_forever_negative_button">Tomu nevěřím</string>
    <string name="dialog_location_request_title">Potřebujeme zapnout polohu</string>
    <string name="dialog_location_request_message">
                Používáš <b>Android 10 a vyšší</b>, který pro vyhledání <b>Bluetooth Low Energy</b>
                zařízení a tedy i Testbed zařázení potřebuje zapnout i samotnou polohu zařízení.\n\n
                Neboj, žádné údaje o tvojí poloze <b>neshomaždujeme</b> a <b>neukládáme</b>,
                jen jí potřebujeme pro správnou funkci aplikace. <b>Prosím zapni polohu.</b>
            </string>
    <string name="dialog_location_request_positive_button">Zapnout polohu</string>
    <string name="dialog_location_request_negative_button">Tomu nevěřím</string>
    <string name="dialog_location_denied_title">Bez zapnuté polohy to nepůjde</string>
    <string name="dialog_location_denied_message">
                Tak takhle to opravdu nepůjde. Bez zapnuté polohy se na <b>Androidu 10 a vyšším</b>
                opravdu neobejdeme, proto bude aplikace ukončena.\n\n
                Pokud sis to rozmyslel, prosím zapni polohu.
            </string>
    <string name="dialog_location_denied_positive_button">Zapnout polohu</string>
    <string name="dialog_location_denied_negative_button">Tomu nevěřím</string>
    <string name="dialog_bluetooth_adapter_denied_title">Potřebujeme zapnout Bluetooth</string>
    <string name="dialog_bluetooth_adapter_denied_message">
                Tak takhle to opravdu nepůjde. Bez Bluetooth adaptéru se opravdu neobejdeme.\n\n
                Pokud sis to rozmyslel, zapni prosím <b>Bluetooth adaptér</b>,
                jinak bude aplikace ukončena.
            </string>
    <string name="dialog_bluetooth_adapter_denied_positive_button">Zapnout Bluetooth</string>
    <string name="dialog_bluetooth_adapter_denied_negative_button">Tomu nevěřím</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_title">
        Tak jako posledně?</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_negative_button">
        Raději jiné zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_scanning">
        Hledám zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_not_found_1_2">
        Zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_not_found_2_2">
        se nepodařilo najít</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_found_1_2">
        Zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_found_2_2">
        bylo nalezeno.</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_connecting">
        Připojuji se k zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_connected">
        Připojeno k zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_discovering">
        Objevování dostupných služeb u zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_discovered_1_2">
        Dostupné služby u zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_discovered_2_2">
        byly objeveny</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_not_discovered_1_2">
        U zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_not_discovered_2_2">
        se nepodařilo objevit žádné služby</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_verification_in_progress">
        Prověřování shody s databází u zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_verification_success_1_2">
        Zařízení</string>
    <string name="dialog_connecting_to_last_connected_testbed_device_verification_success_2_2">
        je shodné se záznamem v databázi</string>
    <string name="dialog_export_data_data_for_export_label">Data k exportování:</string>
    <string name="dialog_export_data_steps_data_label">Kroky</string>
    <string name="dialog_export_data_heart_rate_data_label">Srdeční tepy</string>
    <string name="dialog_export_data_temperature_data_label">Teploty</string>
    <string name="dialog_export_data_devices_for_export_label">
        Exportovat z těchto zařízení:</string>
    <string name="dialog_statistical_data_record_count_label">Počet záznamů:</string>
    <string name="dialog_independent_statistical_data_record_mean_value_label">
            Průměrná hodnota:</string>
    <string name="dialog_independent_statistical_data_record_standard_deviation_value_label">
            Směrodatná odchylka:</string>
    <string name="dialog_independent_statistical_data_record_min_value_label">
            Minimální hodnota:</string>
    <string name="dialog_independent_statistical_data_record_median_label">
            Medián:</string>
    <string name="dialog_independent_statistical_data_record_max_value_label">
            Maximální hodnota:</string>
    <string name="menu_disconnect_from_device">Odpojit od zařízení</string>
    <string name="menu_about_application">O aplikaci</string>
    <string name="menu_close_application">Ukončit aplikaci</string>
    <string name="menu_export_data">Exportovat do CSV</string>
</resources>