<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/system_time"
        android:title="12:34:56"
        app:showAsAction="always|withText"
        tools:ignore="AlwaysShowAction,HardcodedText" />

    <item
        android:id="@+id/export_data"
        android:title="@string/menu_export_data"
        app:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/disconnect_from_device"
        android:title="@string/menu_disconnect_from_device"
        app:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/about_application"
        android:title="@string/menu_about_application"
        app:showAsAction="collapseActionView|withText" />

    <item
        android:id="@+id/close_application"
        android:title="@string/menu_close_application"
        app:showAsAction="collapseActionView|withText" />

</menu>