<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_statistical_data_record_count_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_data_set_size_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_independent_statistical_data_record_mean_value_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_mean_value_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_independent_statistical_data_record_standard_deviation_value_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_standard_deviation_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_independent_statistical_data_record_min_value_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_min_value_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_min_value_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="3"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorFei"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_min_value_record_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_independent_statistical_data_record_median_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_median_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_median_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="3"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorFei"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_median_record_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrayLight"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:text="@string/dialog_independent_statistical_data_record_max_value_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_max_value_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:fontFamily="@font/digital7"
                android:gravity="center_horizontal"
                android:minLines="2"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorVsb"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_max_value_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:gravity="center_horizontal"
                android:minLines="3"
                android:scrollHorizontally="false"
                android:textAlignment="center"
                android:textColor="@color/ColorFei"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/dialog_independent_statistical_data_txv_max_value_record_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>